feat(simple-agent-poc): restructure as package with dev script
Move main.py into a proper package structure with __init__.py. Add 'dev' console script entry point to pyproject.toml for 'uv run dev' support.

--- a/projects/simple-agent-poc/pyproject.toml
+++ b/projects/simple-agent-poc/pyproject.toml
@@ -5,3 +5,16 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = []
+
+[project.scripts]
+dev = "simple_agent_poc.main:main"
+
+[tool.uv]
+package = true
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/simple_agent_poc"]
