--- a/projects/simple-agent-poc/pyproject.toml
+++ b/projects/simple-agent-poc/pyproject.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
-dependencies = []
+dependencies = [
+    "litellm>=1.81.14",
+    "python-dotenv>=1.2.1",
+]
 
 [project.scripts]
 dev = "simple_agent_poc.main:main"
@@ -15,6 +18,11 @@ package = true
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "ruff>=0.15.2",
+]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/simple_agent_poc"]
