feat(simple-agent-poc): add pytest test suite and coverage
Add pytest and pytest-cov dependencies for testing. Create comprehensive test suite covering types, llm_client, agent, renderer, and interfaces. Update AGENTS.md with testing documentation and README with test commands.

--- a/projects/simple-agent-poc/pyproject.toml
+++ b/projects/simple-agent-poc/pyproject.toml
@@ -22,7 +22,26 @@ build-backend = "hatchling.build"
 [dependency-groups]
 dev = [
     "ruff>=0.15.2",
+    "pytest>=8.3.4",
+    "pytest-cov>=6.0.0",
 ]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/simple_agent_poc"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+pythonpath = ["src"]
+
+[tool.coverage.run]
+source = ["src/simple_agent_poc"]
+omit = ["*/__init__.py"]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "raise NotImplementedError",
+    "if __name__ == .__main__.:",
+    "pass",
+]
