chore(simple-agent-poc): set timezone in devcontainer config
Add TZ environment variable set to Asia/Tokyo for consistent time handling in the development container.

--- a/projects/simple-agent-poc/.devcontainer/devcontainer.json
+++ b/projects/simple-agent-poc/.devcontainer/devcontainer.json
@@ -12,6 +12,9 @@
   },
   "remoteUser": "vscode",
   "updateRemoteUserUID": true,
+  "containerEnv": {
+    "TZ": "Asia/Tokyo"
+  },
   "customizations": {
     "vscode": {
       "extensions": [
